--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,23 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.navigation-section {
+  border-bottom: 1px dashed gray;
+  display: flex;
+  justify-content: space-between;
+  padding: 2% 0;
+}
+.navigation-section .navigation-links {
+  width: 45%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.navigation-section .navigation-links a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.2rem;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
