--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation Styles here
+
+.navigation-section {
+    border-bottom: 1px dashed gray;
+    display: flex;
+    justify-content: space-between;
+    padding: 2% 0;
+
+    .navigation-links {
+        width: 45%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        // border: 1px solid red;
+    
+        a {
+            text-decoration: none;
+            color: black;
+            font-size: 1.2rem;
+        } //a
+    } //.navigation-links
+}//.navigation-section
