added html and less for header section of desktop version

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 // Navigation Styles here
 
 .navigation-section {
-    border-bottom: 1px dashed gray;
+    border-bottom: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
     padding: 2% 0;
