--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ img {
   margin: 0 auto;
 }
 .navigation-section {
-  border-bottom: 1px dashed gray;
+  border-bottom: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
   padding: 2% 0;
@@ -195,6 +195,16 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home {
+  width: 100%;
+}
+.home .img-header {
+  margin: 0 auto;
+}
+.home .text-header {
+  padding: 2% 0;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section {
   margin: 30px 0;
