--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,16 @@
 .home {
+  width: 100%;
+
+
+  .img-header {
+    margin: 0 auto;    
+  }
+
+  .text-header {
+    padding: 2% 0;
+    border-bottom: 2px dashed @navigation-border;
+  }
+  
 
   .content-section {
     margin: 30px 0;
