--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,7 +16,7 @@
     }
 }
 
-// From codepen challenge
+// Example button mixin from Guided Instruction CodePen tutorial
 // .my-button (@width: 250px, @bg-color: purple, @font-color: pink) {
 //     width: @width;
 //     background-color: @bg-color;
