--- a/css/index.css
+++ b/css/index.css
@@ -180,16 +180,39 @@ img {
   margin: 0 auto;
   padding: 2% 0;
 }
+@media (max-width: 500px) {
+  .navigation-sub-section {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .navigation-sub-section .navigation-links {
   width: 45%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .navigation-sub-section .navigation-links {
+    width: 100%;
+  }
+}
 .navigation-sub-section .navigation-links a {
   text-decoration: none;
   color: black;
   font-size: 1.2rem;
+}
+@media (max-width: 500px) {
+  .navigation-sub-section .navigation-links a {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 500px) {
+  .navigation-sub-section h1 {
+    margin: 2% 0;
+    padding-bottom: 2%;
+    font-size: 3rem;
+  }
 }
 .footer {
   width: 100%;
