--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,18 +12,38 @@
     margin: 0 auto;
     padding: 2% 0;
 
+    @media @mobile {
+        flex-direction: column;
+        align-items: center;
+    }
+
     .navigation-links {
         width: 45%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        // border: 1px solid red;
+
+        @media @mobile {
+            width:100%;
+        }
     
         a {
             text-decoration: none;
             color: black;
             font-size: 1.2rem;
+
+            @media @mobile {
+                font-size: 1.5rem;
+            }
         } //a
     } //.navigation-links
+
+    h1 {
+        @media @mobile {
+            margin: 2% 0;
+            padding-bottom: 2%;
+            font-size: 3rem;
+        }
+    } //h1
 }//.navigation-sub-section
 
