--- a/css/index.css
+++ b/css/index.css
@@ -228,6 +228,11 @@ img {
 .home {
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .header-section {
+    margin: 0 5%;
+  }
+}
 .home .img-header {
   margin: 0 auto;
 }
@@ -241,24 +246,49 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    margin-top: 20px;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 0;
+    margin: 2% 5% 0;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+    margin: 2% 5% 0;
+  }
+}
 .home .content-section .img-content img {
   border-radius: 10px;
 }
 .home .inverse-content {
+  display: flex;
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content .text-content {
+    order: -1;
+  }
 }
 .home .inverse-content .img-content {
   padding-right: 1%;
@@ -267,6 +297,12 @@ img {
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 90%;
+    margin: 4% 5%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -277,9 +313,20 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    margin: 4% 5%;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+  }
 }
 .home .content-pick .destination .btn {
   width: 85%;
@@ -294,4 +341,20 @@ img {
   background-color: white;
   color: #17A2B8;
   cursor: pointer;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 100%;
+    background-color: #17A2B8;
+    color: white;
+    padding: 10px 2px;
+    font-size: 1.6rem;
+    border: 1px solid #17A2B8;
+    border-radius: 15px;
+  }
+  .home .content-pick .destination .btn:hover {
+    background-color: white;
+    color: #17A2B8;
+    cursor: pointer;
+  }
 }
