--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,16 @@
 .home {
   width: 100%;
 
+  // @media @mobile {
+  //   margin: 0 5%;
+  // } //maybe adding @media isn't best here...
+
+  // -------------- HEADER SECTION ---------------
+  .header-section {
+    @media @mobile {
+      margin: 0 5%;
+    }
+  } //all-encompassing header section
 
   .img-header {
     margin: 0 auto;    
@@ -11,23 +21,41 @@
     border-bottom: 2px dashed @navigation-border;
   }
   
-
+  // -------------- CONTENT SECTIONS ____________
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile {
+    //   display: block;
+    //   width: 90%;
+      margin-top: 20px;
+     }
+
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+        margin: 2% 5% 0;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+        margin: 2% 5% 0;
+      }
 
       img {
         border-radius: 10px;
@@ -36,12 +64,18 @@
   }
 
   .inverse-content {
+    display: flex;
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile{
+        order: -1; //moves text above the picture
+      }
+
     }
 
     .img-content {
@@ -54,6 +88,11 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    @media @mobile {
+      width: 90%;
+      margin: 4% 5%;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -65,12 +104,28 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-direction: column;
+      margin: 4% 5%;
+    }
+
+    
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
 
+      @media @mobile {
+        width: 100%;
+        // margin: 4% 5%;
+      }
+
       .btn {
         .custom-btn(85%);
+
+        @media @mobile {
+          .custom-btn(100%);
+        }
       }
     }
   }
