STRETCH: added a drop-down menu

--- a/css/index.css
+++ b/css/index.css
@@ -383,7 +383,7 @@ img {
   margin: 1% 0;
   padding-bottom: 2%;
 }
-.home .form .last-package {
+.home .form .last-item {
   margin-bottom: 4%;
 }
 .home .form .long-line {
