--- a/css/index.css
+++ b/css/index.css
@@ -371,6 +371,12 @@ img {
 .home .form {
   font-size: 1.5rem;
 }
+.home .form input {
+  font-size: 1.5rem;
+}
+.home .form input:focus {
+  background-color: lightsteelblue;
+}
 .home .form .short-line {
   width: 50%;
   padding: 12px 0;
@@ -382,6 +388,10 @@ img {
   width: 5%;
   margin: 1% 0;
   padding-bottom: 2%;
+}
+.home .form .seasons {
+  width: 30%;
+  margin: 1% 0;
 }
 .home .form .last-item {
   margin-bottom: 4%;
