--- a/less/home-page.less
+++ b/less/home-page.less
@@ -143,6 +143,14 @@
   .form{
 		font-size: 1.5rem;
 
+    input {
+      font-size: 1.5rem;
+
+      &:focus {
+      background-color: lightsteelblue;
+      }
+    }
+
 		.short-line {
 			width: 50%;
 			padding: 12px 0;
@@ -155,6 +163,11 @@
       width: 5%;
       margin: 1% 0;
       padding-bottom: 2%;
+    }
+
+    .seasons {
+      width: 30%;
+      margin: 1% 0;
     }
 
     .last-item {
